Fix center aligning

--- a/css/main.css
+++ b/css/main.css
@@ -28,4 +28,5 @@
 .exo-center {
     margin-left: auto;
     margin-right: auto;
+    width: 100%;
 }
